# product-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dprint.json  package-lock.json  rustfmt.toml
.cargo/: audi.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/iota/keytool/: action.yml
.github/actions/iota/setup/: action.yml
.github/actions/publish/publish-wasm/: action.yml
.github/workflows/: build-and-test.yml  clippy.yml  deploy-move.yml  format.yml  shared-build-wasm.yml  wasm-publish-to-npm.yml  wasm-retag-npm.yml
bindings/wasm/: README.md
bindings/wasm/iota_interaction_ts/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
bindings/wasm/iota_interaction_ts/lib/: core_client.ts  gas-station.ts  http-client.ts  index.ts  iota_client_helpers.ts  operation.ts  product-client.ts  transaction_internal.ts
bindings/wasm/iota_interaction_ts/lib/test_utils/: ed_25519_keypair_signer.ts  index.ts
bindings/wasm/iota_interaction_ts/src/: core_client.rs  error.rs  iota_client_ts_sdk.rs  keypair_signer.rs  lib.rs  operation.rs  operation_builder.rs  product_client.rs  transaction_builder.rs  wasm_error.rs
bindings/wasm/iota_interaction_ts/src/bindings/: iota_client.rs  keytool_signer.rs  mod.rs  transaction.rs  transaction_signer.rs  wasm_iota_client.rs  wasm_transaction_signer.rs  wasm_types.rs
bindings/wasm/iota_interaction_ts/src/bindings/keytool/: signer.rs  storage.rs
bindings/wasm/iota_interaction_ts/src/common/: macros.rs  mod.rs  types.rs  utils.rs
borrow_non_store_obj_poc/: Move.toml  README.md  deploy.sh  poc.sh
borrow_non_store_obj_poc/sources/: other_parent.move  parent.move
borrow_non_store_obj_poc/tests/: other_parent_tests.move  parent_tests.move
components_move/: Move.history.json  Move.toml  README.md
components_move/examples/counter/: README.md
components_move/examples/counter/sources/: counter.move  permission.move
components_move/examples/counter/tests/: counter_tests.move
components_move/scripts/: publish_package.sh
components_move/sources/: borrowed_child.move  capability.move  role_map.move  timelock.move
components_move/sources/borrowed_test_childs/: example_child.move  product_a.move  product_b.move
components_move/tests/: capability_component_tests.move  capability_tests.move  core_test_utils.move  role_map_tests.move  test_utils.move  timelock_tests.move
iota_interaction/: Cargo.toml  README.md
iota_interaction/src/: effects_mut_api.rs  interaction_error.rs  iota_client_trait.rs  iota_verifiable_credential.rs  keypair_signer.rs  lib.rs  move_type.rs
iota_interaction/src/keytool/: internal.rs  signer.rs  storage.rs
iota_interaction/src/sdk_types/: error.rs  generated_types.rs  iota_sdk_lib.rs  mod.rs
iota_interaction/src/sdk_types/iota_json_rpc_types/: iota_coin.rs  iota_event.rs  iota_gas_cost_summary.rs  iota_move.rs  iota_object.rs  iota_object_response_error.rs  iota_owner.rs  iota_primitives.rs  iota_transaction.rs  mod.rs
iota_interaction/src/sdk_types/iota_types/: auth_context.rs  balance.rs  base_types.rs  coin.rs  collection_types.rs  crypto.rs  digests.rs  dynamic_field.rs  error.rs  event.rs  execution.rs  execution_status.rs  gas.rs  gas_coin.rs  governance.rs  id.rs  iota_sdk_types_conversions.rs  iota_serde.rs  iota_types_lib.rs  mod.rs  move_authenticator.rs  move_package.rs  object.rs  programmable_transaction_builder.rs  quorum_driver_types.rs  storage.rs  transaction.rs  type_input.rs
iota_interaction/src/sdk_types/iota_types/account_abstraction/: account.rs  authenticator_function.rs  mod.rs
iota_interaction/src/sdk_types/iota_types/auth_context/: fields_v1.rs  mod.rs
iota_interaction/src/sdk_types/iota_types/stardust/output/: mod.rs  nft.rs
iota_interaction/src/sdk_types/iota_types/timelock/: mod.rs  timelock.rs  timelocked_staked_iota.rs
iota_interaction/src/sdk_types/move_core_types/: account_address.rs  annotated_value.rs  annotated_visitor.rs  identifier.rs  language_storage.rs  mod.rs  runtime_value.rs  u256.rs
iota_interaction/src/sdk_types/move_core_types/parsing/: address.rs  mod.rs  parser.rs  types.rs  values.rs
iota_interaction/src/sdk_types/shared_crypto/: intent.rs  mod.rs
iota_interaction_rust/: Cargo.toml
iota_interaction_rust/src/: asset_move_calls.rs  error.rs  identity_move_calls.rs  iota_client_rust_sdk.rs  lib.rs  migration_move_calls.rs  transaction_builder.rs  utils.rs
package_history_cli/: Cargo.toml
package_history_cli/src/: main.rs  utils.rs
product-core/: Cargo.toml
product-core/src/: lib.rs  move_type.rs  network.rs  operation.rs  product_client.rs
product-core/src/move_repr/: mod.rs
product_common/: Cargo.toml
product_common/src/: core_client.rs  error.rs  gas_station.rs  http_client.rs  lib.rs  move_history.rs  move_history_manager.rs  move_utils.rs  network_name.rs  package_registry.rs  test_common.rs  tf_components_registry.rs  transaction_builder.rs  well_known_networks.rs
product_common/src/bindings/: core_client.rs  gas_station.rs  http_client.rs  macros.rs  mod.rs  transaction.rs  utils.rs
product_common/src/test_utils/: common.rs  in_mem_signer.rs  mod.rs  utils.rs
product_common/src/transaction/: mod.rs  transaction_builder.rs
product_common/src/wasm_utils/: mod.rs
