[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/product-core.rs"
rust-version = "1.70"

[workspace]
resolver = "2"
members = [
  "product_common",
  "iota_interaction",
  "bindings/wasm/iota_interaction_ts",
  "iota_interaction_rust",
]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.88"
bcs = "0.1.6"
cfg-if = "1.0.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
# Latest hyper is not compatible with axum-server used by iota-sdk. We need to pin it to 1.7 until iota-sdk upgrades axum-server.
hyper = "=1.7" # Fix for iota-sdk 1.13 issue with axum-server.
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.16.2-rc" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "d8cdab6ab3f2fd9ba8059ba56e80ba950badc88d", features = ["hash", "serde", "schemars"] }
phf = { version = "0.11.2", features = ["macros"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", default-features = false, tag = "v0.3.0" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.46.1", default-features = false, features = ["process"] }
tempfile = "3.20.0"
toml = "0.8"

[workspace.lints.clippy]
result_large_err = "allow"
