[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/product-core.rs"
rust-version = "1.80"

[workspace]
resolver = "2"
members = [
  "product_common",
  "iota_interaction",
  "bindings/wasm/iota_interaction_ts",
  "iota_interaction_rust",
]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.88"
bcs = "0.1.6"
cfg-if = "1.0.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto" }
hyper = "1"
iota-protocol-config = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "36bffd625e1b1d38307eb9e49bd2cb7dd988bb11", default-features = false }
iota-types = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
move-core-types = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
phf = { version = "0.11.2", features = ["macros"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", default-features = false, tag = "v0.3.0" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["process"] }
tempfile = "3.20.0"
toml = "0.8"

[workspace.lints.clippy]
result_large_err = "allow"
