[package]
name = "iota_interaction_rust"
version = "0.8.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "iota_interaction Adapters for non wasm platforms."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
secret-storage.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iota_interaction = { version = "0.8.1", path = "../iota_interaction" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
result_large_err = "allow"

[lints.rust]
# from local sdk types
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)'] }
