[package]
name = "package_history_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "package-history"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
product_common = { path = "../product_common", features = ["package-reg-move-lock"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.0"
