[package]
name = "product-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iota-sdk = { workspace = true }
secret-storage = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
http = { workspace = true }