[package]
name = "product-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iota-sdk = { workspace = true }
secret-storage = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}
futures = { version = "0.3.31", default-features = false }
cynic = "3.12.0"
