[package]
name = "product_common"
version = "0.8.4"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "Sources shared by IOTA products."

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs = { workspace = true, optional = true }
cfg-if.workspace = true
fastcrypto = { workspace = true, optional = true }
iota-keys = { package = "iota-keys", git = "https://github.com/iotaledger/iota.git", tag = "v1.9.2", optional = true }
itertools = { version = "0.13.0", optional = true }
lazy_static = { version = "1.5.0", optional = true }
phf.workspace = true
reqwest = { version = "0.12", default-features = false, optional = true }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
toml = { workspace = true, optional = true }
url = { version = "2", default-features = false, features = ["serde"], optional = true }

[dev-dependencies]
iota_interaction = { path = "../iota_interaction", version = "0.8.4" }
iota_interaction_rust = { path = "../iota_interaction_rust", version = "0.8.4" }
tempfile.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iota_interaction = { path = "../iota_interaction", version = "0.8.4", features = ["keytool"] }
iota_interaction_rust = { path = "../iota_interaction_rust", version = "0.8.4", optional = true }
iota-sdk.workspace = true
tokio = { version = "1.44.2", default-features = false, features = ["process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iota_interaction = { path = "../iota_interaction", version = "0.8.4", default-features = false }
iota_interaction_ts = { path = "../bindings/wasm/iota_interaction_ts", version = "0.8.4" }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", default-features = false, optional = true }

[features]
default = []
binding-utils = ["bindings", "core-client", "transaction"]
bindings = [
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
]
core-client = ["dep:secret-storage"]
# APIs that rely on an HTTP Client won't require the user to provide an HttpClient instance but will
# instead use reqwest::Client.
default-http-client = ["dep:reqwest", "http-client"]
gas-station = ["http-client", "transaction"]
http-client = ["dep:url"]
# Management functions to read Move.lock files and create/update Move.history.json files
move-history-manager = ["dep:toml"]
send-sync = ["secret-storage/send-sync-storage"]
test-utils = [
  "dep:bcs",
  "dep:fastcrypto",
  "dep:iota-keys",
  "dep:lazy_static",
  "dep:secret-storage",
  "send-sync",
]
transaction = [
  "core-client",
  "dep:bcs",
  "dep:fastcrypto",
  "dep:iota_interaction_rust",
  "dep:itertools",
  "dep:secret-storage",
]

[lints.clippy]
result_large_err = "allow"

[lints.rust]
# from local sdk types
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(msim)"] }
