[package]
name = "iota_interaction_ts"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "wasm"]
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "iota_interaction Adapters using Web Assembly bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.94", features = ["std"] }
async-trait = { version = "0.1", default-features = false }
bcs.workspace = true
bls12_381_plus = "0.8.17"
cfg-if.workspace = true
console_error_panic_hook = { version = "0.1" }
eyre = "0.6.12"
fastcrypto.workspace = true
futures = { version = "0.3" }
iota_interaction = { version = "0.2.0", path = "../../../iota_interaction", default-features = false }
js-sys = { version = "0.3.61" }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", default-features = false, tag = "v0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
serde_repr = { version = "0.1", default-features = false }

thiserror.workspace = true
# Want to use the nice API of tokio::sync::RwLock for now even though we can't use threads.
tokio = { version = "1.43", default-features = false, features = ["sync"] }
tsify = "0.4.5"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }
zkryptium = "0.2.2"

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }
instant = { version = "0.1", default-features = false, features = ["wasm-bindgen"] }

[lints.clippy]
# can be removed as soon as fix has been added to clippy
# see https://github.com/rust-lang/rust-clippy/issues/12377
empty_docs = "allow"

[features]
default = []
keytool = ["iota_interaction/keytool"]
keypair-signer = ["iota_interaction/keypair-signer"]
