[package]
name = "iota_interaction_ts"
version = "0.8.11"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "wasm"]
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "iota_interaction Adapters using Web Assembly bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.94", features = ["std"] }
async-trait = { version = "0.1", default-features = false }
bcs.workspace = true
cfg-if.workspace = true
eyre = "0.6.12"
fastcrypto.workspace = true
futures = { version = "0.3" }
# Latest hyper is not compatible with axum-server used by iota-sdk. We need to pin it to 1.7 until iota-sdk upgrades axum-server.
hyper = "=1.7" # Fix for iota-sdk 1.13 issue with axum-server.
iota-sdk = { version = "1.1.5", default-features = false, features = ["serde", "std"] }
iota_interaction = { version = "0.8.11", path = "../../../iota_interaction", default-features = false }
js-sys = { version = "0.3.61" }
json-proof-token = { version = "0.3.5", optional = true }
sd-jwt-payload = { version = "0.2.1", default-features = false, features = ["sha"], optional = true }
sd-jwt-payload-rework = { package = "sd-jwt-payload", version = "0.3", features = ["sha"], optional = true }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", default-features = false, tag = "v0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
strum.workspace = true

thiserror.workspace = true
# Want to use the nice API of tokio::sync::RwLock for now even though we can't use threads.
tokio = { version = "1.46.1", default-features = false, features = ["sync"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }

[lints.clippy]
# can be removed as soon as fix has been added to clippy
# see https://github.com/rust-lang/rust-clippy/issues/12377
empty_docs = "allow"

[features]
default = []
keytool = ["iota_interaction/keytool"]
keypair-signer = ["iota_interaction/keypair-signer"]
# Additional From<E> for WasmError<'_> implementations for Error types provided by additional optional dependencies.
into-wasm-error = ["dep:sd-jwt-payload", "dep:sd-jwt-payload-rework", "dep:json-proof-token"]
