[package]
name = "iota_interaction_ts"
version = "0.8.10"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "wasm"]
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
description = "iota_interaction Adapters using Web Assembly bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.94", features = ["std"] }
futures = { version = "0.3" }
iota-sdk = { git = "https://github.com/iotaledger/iota-rust-sdk.git" }
js-sys = { version = "0.3" }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", default-features = false, tag = "v0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json.workspace = true
product-core = { path = "../../../product-core" }

thiserror.workspace = true
# Want to use the nice API of tokio::sync::RwLock for now even though we can't use threads.
tokio = { version = "1.0", default-features = false, features = ["sync"] }
wasm-bindgen = { version = "0.2.118", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }
